--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "tutorbuddy",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "tutorbuddy-test-pack",
+  "version": "1.0.0",
+  "description": "Automated regression tests for TutorBuddy",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/genai": "^1.34.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "marked": "^15.0.0",
-    "jszip": "^3.10.1"
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@playwright/test": "^1.41.2",
+    "@types/node": "^20.11.19",
+    "typescript": "^5.3.3"
   }
 }
